--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ejs": "~2.5.5",
     "express": "~4.14.1",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "purecss": "~0.6.2",
+    "caman":"~4.1.2"
   }
 }
