--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2",
     "purecss": "~0.6.2",
-    "caman":"~4.1.2"
+    "caman":"~4.1.2",
+    "node-cache":"~4.1.1"
   }
 }
